--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,5 @@ jobs:
       - name: List files in repository
         run: |
           echo "The repository ${{ github.repository }} contains the following files:"
+          touch e
           tree
